# claude-code-camp-2026-Q2

./: .gitignore
.boukensha/prompts/player/: system.md
.boukensha/sessions/: 20260724T115525Z-e045fbc5.jsonl  20260724T121157Z-6d47fdb5.jsonl  20260724T121219Z-63c61068.jsonl
.claude/: settings.json
docs/: explore_architectures.md
docs/journal/: 0_preweek.md
docs/plans/python_port/: 00_config
week0_explore/explore_architecture/001_playing_agent/: CLAUDE.md
week0_explore/explore_architecture/002_agent_skills/data/: goals.md  player.md  world.md
week1_baseline/python/00_config/: README.md  pyproject.toml
week1_baseline/python/00_config/boukensha/: __init__.py
week1_baseline/python/00_config/examples/: example.py
week1_baseline/python/01_struct_skeleton/examples/: example.py
week1_baseline/python/02_the_registry/: README.md  pyproject.toml
week1_baseline/python/02_the_registry/boukensha/: __init__.py  config.py  errors.py
week1_baseline/python/02_the_registry/examples/: example.py
week1_baseline/python/03_prompt_builder/: README.md  pyproject.toml
week1_baseline/python/03_prompt_builder/boukensha/: __init__.py  (+2 more)
week1_baseline/python/04_api_client/: README.md  pyproject.toml
week1_baseline/python/05_agent_loop/: README.md  pyproject.toml
week1_baseline/python/06_the_logger/: README.md  pyproject.toml
week1_baseline/python/log_viz/: README.md  pyproject.toml
week1_baseline/python/log_viz/log_viz/: __init__.py  __main__.py  ansi.py  app.py  session.py
week1_baseline/python/log_viz/log_viz/templates/: index.html  layout.html  session.html
(+40 files in other folders)
