[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boukensha"
version = "0.1.0"
description = "Boukensha step 1: struct skeleton (Python port)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["boukensha"]

[tool.ruff]
line-length = 120
